# stock-scan

./: .env.example  .gitignore  README.md  pyproject.toml  stockscan.example.toml  stockscan.spec
.github/workflows/: build.yml
indicators/: gold_regime.pine  iron_momentum.pine  silver_flow.pine
packaging/: pyinstaller_entry.py
src/stockscan/: __init__.py  __main__.py  cli.py  config.py  filters.py  models.py  output.py  scan.py  sessions.py  ta.py
src/stockscan/engines/: __init__.py  base.py  gold_regime.py  iron_momentum.py  silver_flow.py
src/stockscan/pine/: __init__.py  builtins.py  engine.py  errors.py  lexer.py  parser.py  runtime.py
src/stockscan/providers/: __init__.py  alpaca_provider.py  base.py  polygon_provider.py  yfinance_provider.py
src/stockscan/web/: server.py
src/stockscan/web/static/: index.html
tests/: conftest.py  test_alpaca_polygon.py  test_dashboard.py  test_filters.py  test_gold_regime.py  test_iron_momentum.py  test_pine_interpreter.py  test_providers.py  test_scan_cli.py  test_sessions.py  test_silver_flow.py  test_ta.py
watchlists/: default.txt
