[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockscan"
version = "0.1.0"
description = "Intraday stock scanner running Iron Momentum, Silver Flow, and Gold Regime indicator engines over pluggable live/delayed market-data feeds, with PineScript file support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "yfinance>=0.2.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
build = [
    "pyinstaller>=6.6",
]

[project.scripts]
stockscan = "stockscan.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stockscan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
